--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="./assets/darkmode.css">
     <link rel="stylesheet" href="./assets/mediascreen.css">
+    <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
     <title>Meu Portfólio</title>
 </head>
 <body>
