Update lenguage Translate

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </main>
         <main class="todos">
             <h2 data-lang="pt">Calculadora IMC</h2>
-         <h2 data-lang="en">BMI Calculator</h2>
+         <h2 data-lang="en" style="display: none;">BMI Calculator</h2>
             <section class="aboutPro">
                 <div class="imagensprojetos" id="skywatch">
                     <img src="imagens/IMC.png" alt="">
@@ -235,7 +235,7 @@
         </main>
         <main class="todos">
             <h2 data-lang="pt">Calculadora</h2>
-            <h2 data-lang="en">Calculator</h2>
+            <h2 data-lang="en" style="display: none;">Calculator</h2>
             <section class="aboutPro">
                 <div class="imagensprojetos" >
                     <img src="imagens/calculadora.png" alt="">
