--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
                    
                     <p data-lang="pt">
                         🧑‍🔬 O Choice Coin é uma aplicação que permite converter valores entre diferentes moedas existente no mundo. Entregando então uma cotação atualizada diariamente. Faz uso de uma API que fornece taxas de câmbio em tempo real para garantir que as conversões sejam precisas e atualizadas
-                        🏅 Um projeto interessante e flexível, sendo útil para viajantes, investidores, economistas, traders e exportadores. Simplesmente uma aplicação que amplifica meus entendimentos computacionais acompanhado de alta proficiência no mercado
+                        🏅 Um projeto interessante e flexível, sendo útil para viajantes, investidores, economistas, traders e exportadores. Simplesmente uma aplicação que amplifica meus entendimentos computacionais acompanhado de alta proficiência no mercado.
                     </p>
                     <p data-lang="en" style="display: none;">
                         🧑‍🔬 Choice Coin is an application that allows you to convert values ​​between different currencies around the world. Then delivering an updated quote daily. Makes use of an API that provides real-time exchange rates to ensure conversions are accurate and up-to-date
-                        🏅 An interesting and flexible project, useful for travelers, investors, economists, traders and exporters. Simply an application that amplifies my computational understanding accompanied by high proficiency in the market
+                        🏅 An interesting and flexible project, useful for travelers, investors, economists, traders and exporters. Simply an application that amplifies my computational understanding accompanied by high proficiency in the market.
                     </p>
                     <main class="tecnologias">
                         <img src="imagens/html.png" alt="">
