Changes in index.html

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                 </div>
                 <main class="generalinformation">
                     <p data-lang="pt">
-                        🔦 Estruture seu cotidiano e amplie sua organizacao com o To do list. Uma ferramente disponivel para smartphones e computadores com arquivo pwa ja em sua composição
-                        Um app nativo, com melhor imersão  e facilidade de uso. A aplicação permite a criação de listas de tarefas personalizadas, com a possibilidade de adicionar, editar e excluir itens.
+                        🧑‍🔬 Sky Watch é uma aplicação que fornece informações meteorológicas em tempo real para diferentes cidades. O objetivo do projeto é ajudar os usuários a obterem previsões precisas do tempo de maneira rápida e fácil.
+                        🏅 O fato de ampliar meus conhecimentos em programação, aliado com a necessidade de ter um ferramennta acessível para consultas diárias me inspirou a iniciar tal aplicação. Com a crescente importância das informações meteorológicas para planejamento de atividades cotidinas, o projeto visa atender esta demanda.
                     </p>
                     <p data-lang="en" style="display: none;">
-                        🔦 Structure your daily life and expand your organization with the To do list. A tool available for smartphones and computers with a pwa file already in its composition
-                        A native app, with better immersion and ease of use. The application allows the creation of personalized task lists, with the possibility of adding, editing, and deleting items.
+                        🧑‍🔬 Sky Watch is an application that provides real-time weather information for different cities. The goal of the project is to help users get accurate weather forecasts quickly and easily.
+                        🏅 The fact of expanding my knowledge in programming, combined with the need to have an accessible tool for daily consultations inspired me to start such an application. With the growing importance of meteorological information for planning everyday activities, the project aims to meet this demand.
                     </p>
                     <main class="tecnologias">
                         <img src="imagens/html.png" alt="">
